Basic Retry Logics

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,20 @@ spring:
   application:
     name: spring-boot-fault-tolerance
 
-  retry:
-    enabled: true
-    retry:
-      max-attempts: 5
-      backoff:
-        delay: 2000
-        multiplier: 2.0
-        max-delay: 10000
+#  retry:
+#    enabled: true
+#    retry:
+#      max-attempts: 5
+#      backoff:
+#        delay: 2000
+#        multiplier: 2.0
+#        max-delay: 10000
 
-
+#
 logging:
   level:
     root: INFO
     org.springframework.retry: DEBUG
+
+server:
+  port: 8081
